# AOC-2023

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
source/day2/: d2.cpp
source/day_1/: d1_p2.hpp  day1.hpp  day_t.hpp  main.cpp
source/day_2/: d2.cpp
source/day_3/: d3  d3.cpp  d3p2.cpp
source/day_4/: d4.cpp
test/: CMakeLists.txt
test/source/: ttt_test.cpp
